# spomp

./: CMakeLists.txt  README.md  doxygen.conf  package.xml
action/: GlobalNavigate.action
config/: terrain_types.yaml
include/spomp/: aerial_map.h  controller.h  global.h  global_wrapper.h  keyframe.h  local.h  local_wrapper.h  mapper.h  mapper_wrapper.h  metric_map.h  mlp_model.h  pano_planner.h  pose_graph.h  reachability.h  remote.h  rosutil.h  terrain_pano.h  timer.h  trav_graph.h  trav_map.h  utils.h  waypoint_manager.h
launch/: global.launch  goal_manager.launch  local.launch  mapper.launch  spomp.launch  viz.rviz  waypoint_mission.launch
msg/: ClaimedGoal.msg  ClaimedGoalArray.msg  LocalReachability.msg  LocalReachabilityArray.msg  LocalTraversability.msg  LocalTraversabilityArray.msg  TraversabilityGraph.msg
scripts/: aerial_context.py  aerial_context_edge.py  aerial_context_pt.py  find_object_goal_gen.py  goal_manager.py  pano_plan.py  tmux_start.sh  waypoint_sequence.py
src/: aerial_map.cpp  controller.cpp  global.cpp  global_wrapper.cpp  keyframe.cpp  local.cpp  local_wrapper.cpp  mapper.cpp  mapper_wrapper.cpp  metric_map.cpp  mlp_model.cpp  node_global.cpp  node_local.cpp  node_mapper.cpp  pano_analyzer.cpp  pano_planner.cpp  play_local.cpp  pose_graph.cpp  reachability.cpp  remote.cpp  semantic_color_lut.cpp  terrain_pano.cpp  timer.cpp  trav_graph.cpp  trav_map.cpp  waypoint_manager.cpp
test/: bench.cpp  test_aerial_map.cpp  test_controller.cpp  test_keyframe.cpp  test_metric_map.cpp  test_pano_analyzer.cpp  test_pano_planner.cpp  test_pose_graph.cpp  test_terrain_pano.cpp  test_trav_graph.cpp  test_trav_graph_map.cpp
